# pacs008

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/dhf/: configuration-management-design-transfer.rst  design-development-plan.rst  design-review-change-control.rst  index.rst  risk-management-file.rst  software-architecture-document.rst  software-requirements-specification.rst  traceability-matrix.rst  verification-validation-plan.rst
examples/: generate_xml.py  swift_compliance.py
pacs008/: __init__.py  __main__.py  constants.py  exceptions.py  logging_schema.py
pacs008/api/: __init__.py  app.py  job_manager.py  models.py
pacs008/cli/: cli.py
pacs008/compliance/: __init__.py  swift_charset.py
pacs008/context/: context.py
pacs008/core/: __init__.py  core.py
pacs008/csv/: __init__.py  load_csv_data.py  validate_csv_data.py
pacs008/data/: __init__.py  loader.py
pacs008/db/: __init__.py  load_db_data.py  load_db_data_streaming.py  validate_db_data.py
pacs008/json/: __init__.py  load_json_data.py
pacs008/parquet/: __init__.py  load_parquet_data.py
pacs008/schemas/: pacs.002.001.12.schema.json  pacs.003.001.09.schema.json  pacs.004.001.11.schema.json  pacs.007.001.11.schema.json  pacs.008.001.01.schema.json  pacs.008.001.02.schema.json  pacs.008.001.03.schema.json  pacs.008.001.04.schema.json  pacs.008.001.05.schema.json  pacs.008.001.06.schema.json  pacs.008.001.07.schema.json  pacs.008.001.08.schema.json  pacs.008.001.09.schema.json  pacs.008.001.10.schema.json  pacs.008.001.11.schema.json  pacs.008.001.12.schema.json  pacs.008.001.13.schema.json  pacs.009.001.10.schema.json  pacs.010.001.05.schema.json  pacs.028.001.05.schema.json
pacs008/security/: __init__.py  path_validator.py
pacs008/templates/pacs.002.001.12/: pacs.002.001.12.xml  pacs.002.001.12.xsd  template.xml
pacs008/templates/pacs.003.001.09/: pacs.003.001.09.xml  pacs.003.001.09.xsd  template.xml
pacs008/templates/pacs.004.001.11/: pacs.004.001.11.xml  pacs.004.001.11.xsd  template.xml
pacs008/templates/pacs.007.001.11/: pacs.007.001.11.xml  pacs.007.001.11.xsd  template.xml
pacs008/templates/pacs.008.001.01/: pacs.008.001.01.xml  template.xml
pacs008/templates/pacs.008.001.02/: pacs.008.001.02.xml  template.xml
pacs008/templates/pacs.008.001.03/: pacs.008.001.03.xml  template.xml
pacs008/templates/pacs.008.001.04/: pacs.008.001.04.xml  template.xml
pacs008/templates/pacs.008.001.05/: pacs.008.001.05.xml  template.xml
pacs008/templates/pacs.008.001.06/: pacs.008.001.06.xml  template.xml
pacs008/templates/pacs.008.001.07/: pacs.008.001.07.xml  template.xml
pacs008/validation/: __init__.py  bic_validator.py  iban_validator.py  schema_validator.py  service.py
pacs008/xml/: generate_updated_xml_file_path.py  generate_xml.py  register_namespaces.py  validate_via_xsd.py  write_xml_to_file.py  xml_to_string.py
tests/: test_api.py  test_api_extended.py  test_api_full.py  test_api_models.py  test_bic_validator.py  test_cli_full.py  test_cli_integration.py  test_compliance.py  test_constants.py  test_context.py  test_core_process.py  test_coverage_gaps.py  test_csv_loader.py  test_csv_validate.py  test_data_loader.py  test_data_loader_extended.py  test_db_loader.py  test_enterprise_xsd.py  test_exceptions.py  test_final_coverage.py  test_generate_xml.py  test_gold_master.py  test_iban_validator.py  test_job_manager.py  test_json_loader.py  test_logging_schema.py  test_main_entry.py  test_new_message_types.py  test_parquet_loader.py  test_path_validator.py  test_remaining_gaps.py  test_validation.py  test_validation_service.py  test_version_matrix.py  test_write_xml.py  test_xsd_validation.py
tests/gold_master/: v01_basic.csv  v01_basic.json  v02_basic.json  v03_bicfi_transition.json  v04_bicfi.json  v05_bicfi.json  v06_bicfi.json  v07_bicfi.json  v08_uetr.json  v09_uetr.json  v10_mandate.json  v11_mandate.json  v12_mandate.json  v13_full.json
(+21 files in other folders)
